Sun May  4 07:13:31 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:
        
          Temporarily disabled management of the process log file.

Sat May  3 22:20:02 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/BDC_Task.cpp (collect_data):

          . Bug fix where the return value for putq () was incorrectly
            evaluated, which resulted in the BDC never collecting metrics
            from each component.

Sat May  3 18:09:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/config/jni.mpb:

          . Missing header file for the JNI base project.

Sat May  3 18:01:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Client_Options.h:
        * cuts/utils/Node_Daemon/Node_Daemon_Client.cpp:

          . Implemented the ability to manually spawn a task on the node
            daemon using the node daemon's client.

Fri May  2 18:37:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * install/CUTS_PICML.wxs:

          Added the CAPI generator to the installer.

Fri May  2 03:43:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/schemas/naomi:
        * etc/schemas/naomi/attribute_simple.xsd:
        * etc/schemas/naomi/interface.xsd:

          XML schema definitions for the NAOMI project.

Fri May  2 03:33:22 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          . Modified the connector so that it inputs/outputs all the
            attributes using a single command-line option.

        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.h:
        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:

          . Updated the CAPI generator to handle variables.
          . Bug fix where the implementation for print error messages
            was incorrect.
